# ned_applications

./: .gitignore  README.md
examples/: README.md
examples/Control_Ned_Mouse/: README.md  robot_ned.py
examples/Control_Ned_Mouse/data/: indications.ai
examples/Leap_Motion/: README.md  leap_motion_ned.py
examples/Leap_Motion/leaplib/: Leap.py
examples/Multi_Robot_Production_Line/: README.md
examples/Multirobot_Production_Line/: README.md  robot.py
examples/Multithreading_Learning_Mode/: README.md  multithreading_ned.py
examples/Vision_Conditioning_Conveyor/: README.md  Vision_Conditioning_Conveyor.py
examples/Vision_Conditioning_Multiple_References/: README.md  Vision_Colors_Conditioning.py
examples/Vision_Conditioning_One_Reference/: README.md  Vision_Simple_Conditioning.py
examples/Vision_Conditioning_Two_Workspaces/: README.md  Vision_Multiple_Workspace_Conditioning.py
examples/Vision_Conveyor_Conditioning/: README.md
examples/Vision_Pick_Artificial_Intelligence_Tensorflow/: README.md  labelling.py  robot.py  robot_gui.py  training.py  utils.py
examples/Vision_Pick_Artificial_Intelligence_Tensorflow/model/: saved_model.pb
examples/Vision_Pick_Artificial_Intelligence_Tensorflow/model/variables/: variables.data-00000-of-00001  variables.index
examples/Vision_Tic_Tac_Toe/: README.md  game.py  object_detection.py  robot_player.py  tic_tac_toe_config.yaml  tictactoe_vision.py
tutorials/: README.md
tutorials/Matlab_Inverse_Kinematics/: README.md  ik_ros_matlab_ned.m
tutorials/Matlab_Setup_ROS_Toolbox/: README.md
tutorials/Matlab_Simulation/: README.md  ned_simulation.m
tutorials/ROS_Node_Control/: README.md
tutorials/ROS_Node_Control/ros_node_control/: CMakeLists.txt
tutorials/ROS_Webots_Digital_Twin/: README.md
tutorials/ROS_Webots_Digital_Twin/niryo_robot_webots/: CMakeLists.txt  package.xml
tutorials/ROS_Webots_Digital_Twin/niryo_robot_webots/config/: niryo_webots_trace.conf
tutorials/ROS_Webots_Digital_Twin/niryo_robot_webots/include/niryo_robot_webots/: webots_core.hpp
tutorials/ROS_Webots_Digital_Twin/niryo_robot_webots/launch/: ned_webots.launch  webots.launch
tutorials/ROS_Webots_Digital_Twin/niryo_robot_webots/protos/: .Ned.cache  Ned.proto
tutorials/ROS_Webots_Digital_Twin/niryo_robot_webots/scripts/: send_webots_command.py
tutorials/ROS_Webots_Digital_Twin/niryo_robot_webots/src/: webots_core.cpp  webots_node.cpp
tutorials/ROS_Webots_Digital_Twin/niryo_robot_webots/worlds/: .ned.wbproj  .ros_python.wbproj  ned.wbt
tutorials/Webots/: README.md
tutorials/Webots_simulation/: README.md
tutorials/Webots_simulation/protos/: .Ned.cache
tutorials/Webots_simulation/worlds/: .ned.wbproj
tutorials/matlab_setup_ros_toolbox/: ned_ros_toolbox_matlab.m
tutorials/matlab_simulation/: ned.urdf  ned_simulation.asv
tutorials/ros_node_control/: package.xml
tutorials/ros_node_control/scripts/: control_node_jog.py  control_with_keyboard.py
(+23 files in other folders)
